--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0px;
+  margin: 0%;
 }
 
 /* 헤더 */
@@ -8,7 +8,7 @@ header {
   color: white;
   display: flex;
   justify-content: flex-end;
-  padding: 10px;
+  padding: 0.5% 0%;
 }
 
 header a:link, header a:visited{
@@ -18,12 +18,12 @@ header a:link, header a:visited{
 
 .headerMenu {
   flex-direction: row;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
 }
 
 header .headerBlank {
-  margin-right: 21%;
+  margin-right: 18%;
 }
 
 /* 네비게이션 */
@@ -54,7 +54,7 @@ nav {
 .backgroundImage {
   background-image: url(../images/library.jpg);
   width: 100%;
-  height: 400px;
+  height: 500px;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -67,7 +67,7 @@ nav {
   border: 5px solid darkgreen;
   justify-content: center;
   align-items: center;
-  margin: 0% 25%;
+  margin: 0% 5% 0% 18%;
 }
 
 .search .button {
@@ -75,48 +75,48 @@ nav {
   border: none;
   color: white;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 1em;
 }
 
 .search .text {
-  font-size: 20px;
+  font-size: 1.5em;
 }
 
 /* 백그라운드 - 양산도서관 */
 .language {
-  margin: 0px 0px 0px 50px;
   color: white;
   float: right;
 }
 
 .language1 {
-  font-size: 15px;
+  font-size: 1em;
 }
 
 .language2 {
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 2em;
+  font-weight: bolder;
   color: lightblue;
 }
 
 /* 메인 - 섹션 - first */
 .first {
-  margin: 0% 25%;
+  margin-top: -12%;
+  margin-left: 18%;
   display: grid;
-  grid-template-columns: 400px 100px;
+  grid-template-columns: 1fr 2fr;
 }
 
 /* 메인 - 섹션 - first - announce */
 .announce {
   background-color: white;
-  padding: 10px;
+  padding: 2%;
 }
 
 .announce .line {
-  width: 370px;
-  height: 2px;
+  width: 100%;
+  height: 1.1%;
   background-color: gray;
-  margin: 2.5px;
+  margin: 1%;
 }
 
 .announce1 {
@@ -124,23 +124,22 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-
 .announce1 .fa-solid {
-  margin-right: 10px;
+  margin-right: 5%;
 }
 
 /* 메인 - 섹션 - first - sixMenu */
 .sixMenu {
+  margin-right: 25%;
   display: grid;
-  grid-template-rows: 100px 100px;
-  grid-template-columns: 200px 200px 200px;
-  /* padding: 10px 0px; */
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 /* 메인 - 섹션 - first - sixMenu - 메뉴 1 */
 .myLibrary {
   background-color: lightgray;
-  padding: 10px;
+  padding: 5%;
 }
 
 .myLibrary h3 {
@@ -152,16 +151,16 @@ nav {
 }
 
 .myLibrary .line {
-  width: 170px;
-  height: 2px;
+  width: 100%;
+  height: 3%;
   background-color: gray;
-  margin: 2.5px 0px;
+  margin: 1.5%;
 }
 
 /* 메인 - 섹션 - first - sixMenu - 메뉴 2 */
 .electricLibrary {
   background-color: white;
-  padding: 10px;
+  padding: 5%;
 }
 
 .electricLibrary h3 {
@@ -173,16 +172,17 @@ nav {
 }
 
 .electricLibrary .line {
-  width: 170px;
-  height: 2px;
+  width: 100%;
+  height: 3%;
   background-color: gray;
-  margin: 2.5px 0px;
+  margin: 1.5%;
 }
+/* 반응형으로 바꾸는 중...  */
 
 /* 메인 - 섹션 - first - sixMenu - 메뉴 3 */
 .selectProgram {
   background-color: skyblue;
-  padding: 10px;
+  padding: 5%;
   color: white;
 }
 
@@ -261,7 +261,7 @@ nav {
 
 /* 메인 - 섹션 - second */
 .second {
-  margin: 0% 25%;
+  margin-left: 18%;
   display: grid;
   grid-template-columns: 350px 350px 350px;
 }
