다시는 이딴 노가다를 하지 않겠노라

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -260,31 +260,31 @@ nav {
   margin: 1.5% 0%;
 }
 
-/* 반응형으로 바꾸는 중...  */
 
 /* 메인 - 섹션 - second */
 .second {
   margin-left: 18%;
+  margin-top: 1%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 0.3fr 0.3fr 0.3fr;
 }
 
 /* 메인 - 섹션 - second - 신착자료 */
-.newArrive {
-  width: 310px;
-  height: 200px;
-}
 
 .newArrive .line {
-  width: 310px;
-  height: 2px;
+  width: 82%;
+  height: 0.5%;
   background-color: gray;
-  margin: 5px 0px;
+  margin: 0.5% 0%;
+}
+
+.newArrive .fa-solid{
+  margin-right: 18%;
 }
 
 .newArrive .books {
   display: flex;
-  gap: 3px;
+  gap: 1%;
 }
 
 .newArrive .container {
@@ -294,24 +294,25 @@ nav {
 }
 
 .books img {
-  padding: 10px 0px;
+  padding: 4% 0%;
   width: 100px;
 }
 
 /* 메인 - 섹션 - second - 휴관일 표 */
+.table h3{
+  margin-bottom: 2%;
+}
+
 .table table,
 .table th,
 .table td {
-  margin: 5px 0px;
+  margin: 1% 0%;
   border: 1px solid black;
   border-collapse: collapse;
   text-align: center;
-  font-size: 10px;
-  padding: 5px 1px;
-}
-
-.table h3 {
-  /* margin: 0px 0px 5px 0px; */
+  font-size: 0.5em;
+  padding-top: 1%;
+  padding-bottom: 2%;
 }
 
 .table .blueTable {
@@ -326,42 +327,42 @@ nav {
 
 /* 메인 - 섹션 - second - 휴관일 */
 .second .dayOff {
-  width: 292px;
-  height: 100px;
+  width: 78%;
+  height: 20%;
   border: 1px solid gray;
-  margin-top: 32px;
+  margin-top: 10%;
   display: flex;
   align-items: center;
-
 }
 
 .dayOff .fa-solid {
-  color: steelblue;
-  scale: 300%;
-  margin: 32px;
+  background-color: steelblue;
+  padding: 5.5% 6.5%;
+  color: white;
+  border-radius: 50%;
+  font-size: 2em;
+  margin-left: 4%;
 }
 
 .dayOff p {
   color: red;
-  margin-bottom: 60px;
-  font-size: 15px;
+  margin-bottom: 20%;
+  margin-left: 5%;
+  font-size: 1em;
 }
 
 /* 메인 - 섹션 - second - 바로가기 */
-
 .shortCut .sns {
   display: grid;
-  grid-template-columns: 140px 140px;
-  gap: 10px;
+  grid-template-columns: 0.39fr 0.39fr;
+  gap: 2.5%;
 }
 
 .shortCut h3 {
-  margin-top: 32px;
+  margin-top: 5%;
 }
 
 .shortCut .kakaoTalk {
-  width: 140px;
-  height: 80px;
   border: 1px solid gray;
   display: flex;
   align-items: center;
@@ -369,14 +370,13 @@ nav {
 }
 
 .kakaoTalk .fa-solid {
-  scale: 150%;
-  margin-right: 10px;
-  margin-left: 10px;
+  font-size: 2em;
+  margin-right: 1%;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 .shortCut .instagram {
-  width: 140px;
-  height: 80px;
   border: 1px solid gray;
   display: flex;
   align-items: center;
@@ -384,9 +384,10 @@ nav {
 }
 
 .instagram .fa-brands {
-  scale: 175%;
-  margin-right: 10px;
-  margin-left: 10px;
+  font-size: 2em;
+  margin-right: 1%;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 /* 메인 - 섹션 - subMenu */
