--- a/css/libCreateAccount.css
+++ b/css/libCreateAccount.css
@@ -8,17 +8,23 @@ header {
   color: white;
   display: flex;
   justify-content: flex-end;
-  padding: 10px;
+  padding: 0.5% 0%;
+}
+
+header a:link,
+header a:visited {
+  text-decoration: none;
+  color: white;
 }
 
 .headerMenu {
   flex-direction: row;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
 }
 
 header .headerBlank {
-  margin-right: 21%;
+  margin-right: 18%;
 }
 
 /* 네비게이션 */
@@ -46,15 +52,15 @@ nav {
 }
 
 /* 메인 - remote */
-.remote{
+.remote {
   display: grid;
-  grid-template-rows: 50px 50px 50px 50px;
+  grid-template-rows: 1fr 2fr 2fr 2fr;
   grid-template-columns: 200px;
-  margin: 0px 0px 0px 450px;
+  margin-left: 55%;
   text-align: center;
 }
 
-.remote p{
+.remote p {
   align-content: center;
   background-color: green;
   color: white;
@@ -62,31 +68,37 @@ nav {
 }
 
 .rest p {
-  padding:10px 0px;
+  padding: 5%;
   background-color: white;
   color: black;
 }
 
-.rest .restAccount{
+.rest .restAccount {
   background-color: steelblue;
   color: white;
 }
 
-main{
+.rest a:link,
+.rest a:visited {
+  text-decoration: none;
+}
+
+main {
   display: grid;
-  grid-template-columns: 700px 750px;
+  grid-template-columns: 1fr 1fr;
+  margin-right: 18%;
 }
 
-main .createAccount{
-  margin-top: 40px;
+main .createAccount {
+  margin-top: 5%;
 }
 
-.createAccount h3{
-  font-size: 40px;
-  margin-bottom: 5px;
+.createAccount h3 {
+  font-size: 2.5em;
+  margin-bottom: 1%;
 }
 
-.createAccountLine{
+.createAccountLine {
   width: 750px;
   height: 2px;
   background-color: black;
@@ -94,164 +106,184 @@ main .createAccount{
 }
 
 /* 회원구분 등 이쁜 사진 */
-.explain{
+.explain {
   border: none;
   text-align: center;
-  padding-bottom: 50px;
+  padding-bottom: 5%;
 }
 
-.procedure{
+.procedure {
   display: flex;
   justify-content: space-around;
 }
 
 /* 회원구분 */
-.procedure .fa-users{
+.procedure .fa-users {
   background-color: lightgray;
-  padding: 20px 40px 10px ;
-  font-size: 30px;
+  padding: 2% 5%;
+  font-size: 2em;
   color: steelblue;
 }
-.fa-users p{
-  font-size: 16px;
+
+.fa-users p {
+  font-size: 0.5em;
   margin-top: 20px;
 }
 
 /* 본인확인 */
-.procedure .fa-user-check{
+.procedure .fa-user-check {
   background-color: lightgray;
-  padding: 20px 40px 10px ;
-  font-size: 30px;
+  padding: 2% 5%;
+  font-size: 2em;
   color: gray;
 }
-.fa-user-check p{
-  font-size: 16px;
+
+.fa-user-check p {
+  font-size: 0.5em;
   margin-top: 20px;
 }
 
 /* 약관동의 */
-.procedure .fa-file-contract{
+.procedure .fa-file-contract {
   background-color: lightgray;
-  padding: 20px 40px 10px ;
-  font-size: 30px;
+  padding: 2% 5%;
+  font-size: 2em;
   color: gray;
 }
-.fa-file-contract p{
-  font-size: 16px;
+
+.fa-file-contract p {
+  font-size: 0.5em;
   margin-top: 20px;
 }
 
 /* 정보입력 */
-.procedure .fa-file-signature{
+.procedure .fa-file-signature {
   background-color: lightgray;
-  padding: 20px 40px 10px ;
-  font-size: 30px;
+  padding: 2% 5%;
+  font-size: 2em;
   color: gray;
 }
-.fa-file-signature p{
-  font-size: 16px;
+
+.fa-file-signature p {
+  font-size: 0.5em;
   margin-top: 20px;
 }
 
 /* 가입완료 */
-.procedure .fa-unlock-keyhole{
+.procedure .fa-unlock-keyhole {
   background-color: lightgray;
-  padding: 20px 40px 10px ;
-  font-size: 30px;
+  padding: 2% 5%;
+  font-size: 2em;
   color: gray;
 }
-.fa-unlock-keyhole p{
-  font-size: 16px;
+
+.fa-unlock-keyhole p {
+  font-size: 0.5em;
   margin-top: 20px;
 }
 
 /* 회원 구분 및 설명 */
-.division .fa-angle-right{
+.division .fa-angle-right {
   background-color: steelblue;
   color: white;
-  padding: 5px 7px;
-  margin-right: 5px;
+  padding: 1% 1.5%;
+  margin-right: 1%;
 }
 
-.jemok p{
+.jemok p {
   font-weight: bold;
 }
 
-.naeyong{
-  margin-left: 10px;
+.naeyong {
+  margin-left: 2%;
 }
 
 /* 나이 따라서 뭔가 나누기 */
-.age{
+.age {
   display: flex;
-  gap: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  gap: 4%;
+  margin-top: 4%;
+  margin-bottom: 4%;
 }
 
-.age .under14{
-  font-size: 100px;
+.age .under14 {
+  font-size: 5em;
   background-color: lightgray;
   color: steelblue;
-  padding: 50px 100px;
+  padding: 5% 12%;
   text-align: center;
-  margin-left: 75px;
+  margin-left: 10%;
 }
 
-.under14 p{
-  font-size: 20px;
-  margin-top: 10px;
+.under14 p {
+  font-size: 1.5rem;
+  margin-top: 7%;
   font-weight: bold;
 }
 
-.age .over14{
-  font-size: 100px;
+.age .over14 {
+  font-size: 5em;
   background-color: lightgray;
   color: steelblue;
-  padding: 50px 100px;
+  padding: 5% 12%;
   text-align: center;
+  margin-right: 10%;
 }
 
-.over14 p{
-  font-size: 20px;
-  margin-top: 10px;
+.over14 p {
+  font-size: 1.5rem;
+  margin-top: 7%;
   font-weight: bold;
 }
 
 /* 회원가입 주의사항 */
-.naeyong2{
-  margin-left: 30px;
-  margin-bottom: 100px;
+.naeyong2 {
+  margin-left: 5%;
+  margin-bottom: 5%;
+  font-size: 0.9em;
+}
+
+.first {
+  background-color: steelblue;
+  margin-top: 5%;
+  margin-bottom: 1%;
+}
+
+.first .word {
+  display: flex;
+  justify-content: center;
+  gap: 1%;
+  padding: 1%;
+  color: white;
+  font-weight: bold;
 }
 
 /* 푸터 */
-footer {
-  margin: 0px 0px 0px 450px;
+.second {
+  margin-left: 18%;
   display: flex;
   align-items: center;
 }
 
-footer .image{
-  margin: 10px;
+.second .image {
+  margin: 2%;
 }
 
-footer .ect{
+.second .ect {
   color: gray;
-  font-size: 10px;
-  margin-top: -5px;
-  margin-left: 30px;
+  font-size: 0.8em;
 }
 
-footer .site{
-  margin-left: 220px;
-  margin-top: -20px;
+.second .site {
+  margin-left: 5%;
+  margin-top: -2%;
 }
 
-.site select{
-  font-size: 16px;
+.site select {
+  font-size: 1em;
 }
 
-.site .button{
+.site .button {
   border: 1px solid grey;
   background-color: white;
 }
