--- a/css/ysLIbHeader.css
+++ b/css/ysLIbHeader.css
@@ -11,7 +11,8 @@ header {
   padding: 0.5% 0%;
 }
 
-header a:link, header a:visited{
+header a:link,
+header a:visited {
   text-decoration: none;
   color: white;
 }
@@ -24,4 +25,62 @@ header a:link, header a:visited{
 
 header .headerBlank {
   margin-right: 18%;
+}
+
+@media screen and (min-width : 768px) and (max-width : 1023px) {
+  * {
+    margin: 0%;
+  }
+
+  header {
+    background-color: white;
+    color: black;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  header a:link,
+header a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+.headerMenu {
+  flex-direction: row;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
+}
+
+header .headerBlank{
+  margin-right: 0%;
+}
+}
+
+@media screen and (max-width : 767px){
+  * {
+    margin: 0%;
+  }
+
+  header {
+    background-color: white;
+    color: black;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  header a:link,
+header a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+.headerMenu {
+  flex-direction: row;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
+}
+
+header .headerBlank{
+  margin-right: 0%;
+}
 }
