--- a/css/ysLibNavigation.css
+++ b/css/ysLibNavigation.css
@@ -4,9 +4,18 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 
-.navMenu{
+nav .mobileCard {
+  display: none;
+}
+
+nav .fa-solid {
+  display: none;
+}
+
+.navMenu {
   text-decoration: none;
   color: black;
 }
@@ -27,21 +36,121 @@ nav {
 }
 
 
-.nav1 h3:hover{
+.nav1 h3:hover {
   color: steelblue;
 }
 
-.nav2{
+.nav2 {
   background-color: steelblue;
   color: white;
 }
 
-.nav2 p{
+.nav2 p {
   margin: 0% 0.5%;
 }
 
-.navMenu3{
+.navMenu3 {
   text-decoration: none;
   color: black;
-  
+}
+
+@media screen and (min-width : 768px) and (max-width : 1023px) {
+  * {
+    margin: 0%;
+  }
+
+  nav {
+    background-color: white;
+  }
+
+  nav .nav1 {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+  }
+
+  nav .mobileCard {
+    display: inline-block;
+  }
+
+  nav .fa-solid {
+    display: inline-block;
+  }
+
+  .nav1 .mobileCard{
+    background-color: green;
+    color: white;
+    font-weight: bold;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    align-content: center;
+    border-radius: 10px;
+    margin-bottom: 5px;
+  }
+
+  nav h3 {
+    display: none;
+  }
+
+  .navMenu {
+    text-decoration: none;
+    color: black;
+  }
+
+  .libraryLogo {
+    margin: 2% 0%;
+    scale: 80%;
+  }
+
+}
+
+@media screen and (max-width : 767px) {
+  * {
+    margin: 0%;
+  }
+
+  nav {
+    background-color: white;
+  }
+
+  nav .nav1 {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+  }
+
+  nav .mobileCard {
+    display: inline-block;
+  }
+
+  nav .fa-solid {
+    display: inline-block;
+  }
+
+  .nav1 .mobileCard{
+    background-color: green;
+    color: white;
+    font-weight: bold;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    align-content: center;
+    border-radius: 10px;
+    margin-bottom: 5px;
+  }
+
+  nav h3 {
+    display: none;
+  }
+
+  .navMenu {
+    text-decoration: none;
+    color: black;
+  }
+
+  .libraryLogo {
+    margin: 2% 0%;
+    scale: 80%;
+  }
 }
